corrected issue-do not proceed to checkout if any of the cart items are unlisted

--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -460,7 +460,7 @@
                 <div class="row">
                   <div class="col-md-12">
                     <a
-                      href="/checkout"
+                      href="/goToCheckout"
                       class="btn btn-black btn-lg py-3 btn-block"
                     >
                       Proceed To Checkout
