--- a/views/admin/adminDashboard.ejs
+++ b/views/admin/adminDashboard.ejs
@@ -61,8 +61,8 @@
               <div class="card-body">
                 <div class="d-flex align-items-center justify-content-between">
                   <div>
-                    <p class="text-muted mb-1 fw-medium">Revenue</p>
-                    <h3 class="mb-1">₹<%=grossRevenue%></h3>
+                    <p class="text-muted mb-1 fw-medium">Net Sales</p>
+                    <h3 class="mb-1">₹<%=netSales%></h3>
                     <!-- <small class="text-success">+8% from last month</small> -->
                   </div>
                   <div class="stats-icon bg-success bg-opacity-10">
