corrected issues related to variant edit

--- a/views/admin/addProducts.ejs
+++ b/views/admin/addProducts.ejs
@@ -258,7 +258,7 @@
                             ></p>
                           </div>
 
-                          <div class="col-md-6">
+                          <!-- <div class="col-md-6">
                             <label class="form-label fw-semibold"
                               >Offer Price</label
                             >
@@ -272,9 +272,9 @@
                               id="errVariants_0_offerPrice"
                               class="errorMsg small text-danger mt-1"
                             ></p>
-                          </div>
+                          </div> -->
 
-                          <div class="col-md-6">
+                          <div class="col-md-12">
                             <label class="form-label fw-semibold"
                               >SKU Code</label
                             >
