--- a/views/admin/addVariants.ejs
+++ b/views/admin/addVariants.ejs
@@ -233,7 +233,7 @@
                             ></p>
                           </div>
 
-                          <div class="col-md-6">
+                          <!-- <div class="col-md-6">
                             <label class="form-label fw-bold"
                               >Offer Price</label
                             >
@@ -247,9 +247,9 @@
                               id="errVariants_0_offerPrice"
                               class="errorMsg small text-danger mt-1"
                             ></p>
-                          </div>
+                          </div> -->
 
-                          <div class="col-md-6">
+                          <div class="col-md-12">
                             <label class="form-label fw-bold">SKU Code</label>
                             <input
                               type="text"
