--- a/views/user/productDetails.ejs
+++ b/views/user/productDetails.ejs
@@ -175,7 +175,7 @@
                   <div class="pro-qty bg-white">
                     <input
                       type="number"
-                      value="1"
+                      value="<%=checkQuantity<=0?0:1%>"
                       id="quantity"
                       name="quantity"
                     />
