--- a/views/admin/adminDashboard.ejs
+++ b/views/admin/adminDashboard.ejs
@@ -66,7 +66,7 @@
                     <!-- <small class="text-success">+8% from last month</small> -->
                   </div>
                   <div class="stats-icon bg-success bg-opacity-10">
-                    <i class="bi bi-currency-dollar text-success fs-4"></i>
+                    <i class="bi bi-currency-rupee text-success fs-4"></i>
                   </div>
                 </div>
               </div>
