--- a/views/admin/variant_edit.ejs
+++ b/views/admin/variant_edit.ejs
@@ -237,7 +237,7 @@
                             ></p>
                           </div>
 
-                          <div class="col-md-6">
+                          <!-- <div class="col-md-6">
                             <label class="form-label fw-bold"
                               >Offer Price</label
                             >
@@ -252,9 +252,9 @@
                               id="err_offerPrice"
                               class="errorMsg small text-danger mt-1"
                             ></p>
-                          </div>
+                          </div> -->
 
-                          <div class="col-md-6">
+                          <div class="col-md-12">
                             <label class="form-label fw-bold">SKU Code</label>
                             <input
                               type="text"
@@ -297,7 +297,7 @@
 
                           <div class="col-md-12">
                             <label class="form-label fw-bold"
-                              >Change Images</label
+                              >Add More Images</label
                             >
                             <input
                               type="file"
