--- a/views/user/page404.ejs
+++ b/views/user/page404.ejs
@@ -70,7 +70,7 @@
       <div class="text-center">
         <h1 class="text-danger fw-bold">404</h1>
         <br />
-        <h1>Page Not Found</h1>
+        <h2>Page/Item Not Found</h2>
         <br />
         <a href="/"><button class="btn btn-success">Go to Home Page</button></a>
       </div>
