--- a/views/user/userProfilePartials/emailPasswordEditSection.ejs
+++ b/views/user/userProfilePartials/emailPasswordEditSection.ejs
@@ -157,6 +157,7 @@
                           value="<%=userInfo.email%>"
                           style="width: 280px"
                           required
+                          disabled
                         />
                       </div>
                     </div>
