--- a/views/admin/variant_edit.ejs
+++ b/views/admin/variant_edit.ejs
@@ -284,6 +284,14 @@
                                   />
                                   <a
                                     href="#"
+                                    class="btn btn-sm btn-light border border-black position-absolute top-0 start-0"
+                                    onclick="replaceImage('<%=product._id%>', '<%=variant._id%>', <%=index%>); return false;"
+                                  >
+                                    🔁
+                                  </a>
+
+                                  <a
+                                    href="#"
                                     class="btn btn-sm btn-danger position-absolute top-0 end-0"
                                     onclick="removeImage('<%=product._id%>', '<%=variant._id%>', <%=index%>); return false;"
                                   >
