corrected issues related to product listing

--- a/views/user/productListingPage.ejs
+++ b/views/user/productListingPage.ejs
@@ -170,8 +170,7 @@
                           class="form-check-label"
                           for="brand_<%=brandItem.brand%>"
                           ><%=brandItem.brand%>
-                          (<%=brandItem.count%>)</label
-                        >
+                        </label>
                       </div>
                       <%})%>
                     </div>
