added about and contact page

--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -25,8 +25,8 @@
         <li class="nav-item">
           <a class="nav-link" href="/collections">Shop</a>
         </li>
-        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="/aboutUs">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="/contactUs">Contact</a></li>
       </ul>
 
       <!-- Right Section: Search + Icons -->
