productt lising page changes

--- a/views/user/productListingPage.ejs
+++ b/views/user/productListingPage.ejs
@@ -221,8 +221,7 @@
                             class="form-check-label"
                             for="price_<%= priceItem.priceRanges %>"
                             ><%= priceItem.priceRanges %>
-                            (<%=priceItem.count%>)</label
-                          >
+                          </label>
                         </div>
                         <%})%>
                       </div>
@@ -271,7 +270,7 @@
                         />
                         <label class="form-check-label" for="price1"
                           ><%= caseSizeItem._id.min %>-<%= caseSizeItem._id.max %>
-                          mm (<%=caseSizeItem.count%>)</label
+                          mm </label
                         >
                       </div>
                       <%})%>
