changes in footer

--- a/views/user/productDetails.ejs
+++ b/views/user/productDetails.ejs
@@ -149,14 +149,14 @@
                   <%=product.brand%></span
                 >
               </h3>
-              <div class="rating">
+              <!-- <div class="rating">
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <span>( 138 reviews )</span>
-              </div>
+              </div> -->
               <%if(variant.offerPrice==variant.actualPrice){%>
               <div class="product__details__price">
                 ₹<%=variant.offerPrice%> <span></span>
@@ -285,15 +285,15 @@
                     >Specification</a
                   >
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a
                     class="nav-link"
                     data-toggle="tab"
                     href="#tabs-3"
                     role="tab"
-                    >Reviews ( 2 )</a
+                    >Reviews</a
                   >
-                </li>
+                </li> -->
               </ul>
               <div class="tab-content">
                 <div class="tab-pane text-center" id="tabs-1" role="tabpanel">
@@ -311,8 +311,8 @@
                   <p>Movement Type: <%=variant.movementType%></p>
                   <p>Case Material: <%=variant.caseMaterial%></p>
                 </div>
-                <div class="tab-pane" id="tabs-3" role="tabpanel">
-                  <h6>Reviews ( 2 )</h6>
+                <!-- <div class="tab-pane" id="tabs-3" role="tabpanel">
+                  <h6>Reviews</h6>
                   <p>
                     Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
                     odit aut loret fugit, sed quia consequuntur magni dolores
@@ -330,7 +330,7 @@
                     ridiculus mus. Donec quam felis, ultricies nec, pellentesque
                     eu, pretium quis, sem.
                   </p>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
