--- a/views/partials/user/footer.ejs
+++ b/views/partials/user/footer.ejs
@@ -18,9 +18,9 @@
           <div class="footer__payment">
             <a href="#"><img src="img3/payment/payment-1.png" alt="" /></a>
             <a href="#"><img src="img3/payment/payment-2.png" alt="" /></a>
-            <a href="#"><img src="img3/payment/payment-3.png" alt="" /></a>
+            <!-- <a href="#"><img src="img3/payment/payment-3.png" alt="" /></a>
             <a href="#"><img src="img3/payment/payment-4.png" alt="" /></a>
-            <a href="#"><img src="img3/payment/payment-5.png" alt="" /></a>
+            <a href="#"><img src="img3/payment/payment-5.png" alt="" /></a> -->
           </div>
         </div>
       </div>
@@ -28,10 +28,8 @@
         <div class="footer__widget">
           <h6>Quick links</h6>
           <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Blogs</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a href="/aboutUs">About</a></li>
+            <li><a href="/contactUs">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -39,10 +37,9 @@
         <div class="footer__widget">
           <h6>Account</h6>
           <ul>
-            <li><a href="#">My Account</a></li>
-            <li><a href="#">Orders Tracking</a></li>
-            <li><a href="#">Checkout</a></li>
-            <li><a href="#">Wishlist</a></li>
+            <li><a href="/dashboard">My Account</a></li>
+            <li><a href="/orders">Orders</a></li>
+            <li><a href="/wishlist">Wishlist</a></li>
           </ul>
         </div>
       </div>
@@ -53,13 +50,13 @@
             <input type="text" placeholder="Email" />
             <button type="submit" class="site-btn">Subscribe</button>
           </form>
-          <div class="footer__social">
+          <!-- <div class="footer__social">
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-youtube-play"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-pinterest"></i></a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -72,8 +69,8 @@
             <script>
               document.write(new Date().getFullYear());
             </script>
-            All rights reserved | 
-            <i class="fa fa-heart" aria-hidden="true"></i> 
+            All rights reserved |
+            <i class="fa fa-heart" aria-hidden="true"></i>
             <a href="https://colorlib.com" target="_blank">Tempus</a>
           </p>
         </div>
