--- a/views/user/userProfilePartials/emailPasswordEditSection.ejs
+++ b/views/user/userProfilePartials/emailPasswordEditSection.ejs
@@ -156,8 +156,7 @@
                           name="email"
                           value="<%=userInfo.email%>"
                           style="width: 280px"
-                          required
-                          disabled
+                          readonly
                         />
                       </div>
                     </div>
