--- a/views/user/checkOut.ejs
+++ b/views/user/checkOut.ejs
@@ -568,40 +568,15 @@
                       <div class="col-md-6 d-flex align-items-center">
                         <div class="form-check mt-3">
                           <input
-                              class="form-check-input"
-  type="checkbox"
-  name="isDefault"
-  id="isDefault2"
-  value="true"/>
+                            class="form-check-input"
+                            type="checkbox"
+                            name="isDefault"
+                            id="isDefault"
+                            onclick="return confirm('Do you want to make this address as your default address?')"
+                          />
                           <label class="form-check-label" for="isDefault"
                             >Set as default address</label
                           >
-
-<script>
-  const defaultCheckbox = document.getElementById('isDefault2');
-
-  defaultCheckbox.addEventListener('change', function (e) {
-    if (this.checked) {
-      Swal.fire({
-        title: 'Are you sure?',
-        text: "Do you want to make this address your default address?",
-        icon: 'question',
-        showCancelButton: true,
-        confirmButtonText: 'Yes, make it default',
-        cancelButtonText: 'Cancel',
-        confirmButtonColor: '#3085d6',
-        cancelButtonColor: '#d33',
-      }).then((result) => {
-        if (!result.isConfirmed) {
-          // If cancelled, uncheck the box
-          defaultCheckbox.checked = false;
-        }
-      });
-    }
-  });
-</script>
-
-
                         </div>
                       </div>
                     </div>
