--- a/views/user/checkOut.ejs
+++ b/views/user/checkOut.ejs
@@ -106,13 +106,21 @@
                       class="text-decoration-none selectAddress"
                     >
                       <div class="address-card border rounded p-3">
-                        <!-- hidden radio for form submission -->
-                        <input
-                          type="radio"
-                          name="selectedAddress"
-                          value="<%=address._id%>"
-                          class="d-none address-radio <%= address.isDefault ? 'checked' : '' %>"
-                        />
+<!-- hidden radio for form submission -->
+<input
+  type="radio"
+  name="selectedAddress"
+  value="<%= address._id %>"
+  class="d-none address-radio"
+  <% if (address.isDefault) { 
+      %> checked <% 
+    } 
+    else if (!userAddresses.addresses.some(addr => addr.isDefault) && userAddresses.addresses[0]._id.equals(address._id)) { 
+      %> checked <% 
+    } 
+  %>
+/>
+
                         <div
                           class="d-flex justify-content-between align-items-start mb-2 text-black"
                         >
